Fix, Errores y Btn Salir

--- a/compilador/src/main/resources/compilador/main.fxml
+++ b/compilador/src/main/resources/compilador/main.fxml
@@ -82,7 +82,7 @@
                                  </image>
                               </ImageView>
                            </graphic></MenuItem>
-                    <MenuItem mnemonicParsing="false" text="Salir">
+                    <MenuItem fx:id="MISalir" mnemonicParsing="false" onAction="#AccionMISalir" text="Salir">
                            <graphic>
                               <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
