Modo oscuro/claro

--- a/compilador/src/main/java/compilador/main.fxml
+++ b/compilador/src/main/java/compilador/main.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="485.0" prefWidth="800.0" styleClass="root" stylesheets="@java-keywords.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="compilador.MainController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="485.0" prefWidth="800.0" fx:id="root" stylesheets="@java-keywords.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="compilador.MainController">
    <top>
       <VBox prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
