--- a/compilador/src/main/resources/compilador/java-keywords.css
+++ b/compilador/src/main/resources/compilador/java-keywords.css
@@ -1,3 +1,8 @@
+.root {
+/*     -fx-background-image:url("../icons/FDP.jpg"); */
+    -fx-background-size: cover;
+}
+
 .keyword {
     -fx-fill: purple;
     -fx-font-weight: bold;
