Agreacion de Pseudolexico

--- a/compilador/src/main/resources/compilador/main.fxml
+++ b/compilador/src/main/resources/compilador/main.fxml
@@ -352,7 +352,16 @@
                      </opaqueInsets></TabPane>
               <TabPane fx:id="TabTbls" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 <tabs>
-                  <Tab text="Tokens">
+                        <Tab text="Pseudocodigo">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TextArea fx:id="TxtPseudo" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0" />
+                                 </children>
+                              </AnchorPane>
+                           </content>
+                        </Tab>
+                  <Tab text="Componentes">
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
